01/04/2009
==========

- Ajustes no cadastro de feeds
- Inclusao de novas tags de i18n
- Alteracao do model, inclusao de stored procedure para inclusao de feeds

HORAS TRABALHADAS: 6h

==========
02/04/2009
==========

- Cadastro de feed ok através de stored procedure

HORAS TRABALHADAS: 1h

==========
03/04/2009
==========

- Remoção de stored procedure. Implementação de transaction e queryes através
do código PHP
- Ajustes no código base. Implementação de transaction no Model

HORAS TRABALHADAS: 2h

==========
04/04/2009
==========

- Alteração do cadastro de Feeds. Inclusao da biblioteca feedparser no
backend e implementação no webservice discover_feed(url)
- Cadastro de feeds: Implementação de inclusão de feed no blog do usuário
- Ajustes no retorno do XML para requisicoes AJAX
- Exibicao de feeds cadastrado no menu lateral
- Bugfixes e melhorias no cadastro de feeds

HORAS TRABALHADAS: 12h

==========
06/04/2009
==========

- Bugfixes e melhorias no cadastro de feeds

HORAS TRABALHADAS: 2h

==========
07/04/2009
==========

- Inclusao de evento nos botoes que carregam um feed
- Ajustes no DB, tabela de itens de notícias
- Inclusao de método para listagem de notícias de um feed no controller Feed,
action "news"
- Bugfixes no cadastro de feeds
- Exibicao de items de feed no dashboard

HORAS TRABALHADAS: 7h

==========
08/04/2009
==========

- Ajustes nos models para reconhecimento de estrutura de dados (formatacao de
data, etc)
- Ajustes no cadastro de feeds
- Inclusao de script para gerenciamento de deteccao / publicacao de blogs no
backend

HORAS TRABALHADAS: 7h

==========
09/04/2009
==========

- Organizacao dos scripts no backend
- Ajustes no backend

HORAS TRABALHADAS: 4h

==========
10/04/2009
==========

- Ajustes no backend

HORAS TRABALHADAS: 2h

==========
11/04/2009
==========

- Ajuste no cadastro de blogs (passa a utilizar script blogclient do backend)
- Exibicao do description de um item de feed selecionado (dashboard)

HORAS TRABALHADAS: 4h