@@ -28,55 +28,26 @@ class WebService:
 
     def blog_discover(self, args):
         if not validate_args(args, ['url'], self.token): return None
-        import blogclient
-        return blogclient.type_dictionary(blogclient.guess_type(args['url']))
+        import blog
+        return blog.type_dictionary(blog.guess_type(args['url']))
 
     # blog url manager test
 
     def blog_manager_url_check(self, args):
         if not validate_args(args, ['url', 'type', 'version'], self.token): return None
-        import blogclient
-        return blogclient.type_dictionary(blogclient.manager_url_check(args['url'], args['type'], args['version']))
+        import blog
+        return blog.type_dictionary(blog.manager_url_check(args['url'], args['type'], args['version']))
 
     # feed discover
 
     def feed_discover(self, args):
         if not validate_args(args, ['url'], self.token): return None
-
-        # feed discover with feedfinder
-
-        from vendor import feedfinder
-
+        import aggregator
         feeds = []
-        if len(args['url']) > 0:
-            feeds = feedfinder.feeds(args['url'])
+        for f in aggregator.guess_feeds(args['url']):
+            feeds.append(aggregator.feed_dictionary(f))
+        return feeds
 
-        result = []
-        feeds_len = len(feeds)
-
-        # feed parsing with feedparser
-
-        if feeds_len > 0:
-
-            from vendor import feedparser
-
-            for i in range(0, len(feeds)):
-                d = feedparser.parse(feeds[i])
-                e = []
-                for j in d['entries']:
-                    e.append({ 'title': j.title,
-                               'link': j.link,
-                               'description': j.description,
-                               'date': j.date if hasattr(j, "date") else "",
-                               'id': j.id if hasattr(j, "id") else "" })
-                result.append({ 'url': feeds[i],
-                                'title': d.feed.title, 
-                                'description': d.feed.description,
-                                'link': d.feed.link,
-                                'date': d.feed.date if hasattr(d.feed, "date") else "",
-                                'entries': e })
-
-        return result
 
 if __name__ == '__main__':
     token = "c4z5mYW1pYWSJe2BzcIq1wv6n95o1E2kwuD1B0Wuo3XbHx82Vk"
